--- a/metronome.html
+++ b/metronome.html
@@ -79,6 +79,13 @@ Original article of method: http://www.yuiblog.com/blog/2010/09/27/clearfix-relo
     background-color: #b00;
 }
 
+.utility {
+    margin: 10px;
+}
+
+.utility button {
+    padding: 5px 10px;
+}
         </style>
         <script src="metronome.js" type="text/javascript"></script>
         <script src="jquery.js" type="text/javascript"></script>
@@ -86,7 +93,7 @@ Original article of method: http://www.yuiblog.com/blog/2010/09/27/clearfix-relo
 (function (global, $) {
     "use strict";
     $(document).ready(function () {
-        var $sequencer = $('#sequence'), cells = [], ticker, metronome, ticks = 0;
+        var $sequencer = $('#sequence'), cells = [], ticker, reset_ticker, metronome, ticks = 0;
         $sequencer.find('.row').each(function (i) {
             cells[i] = [];
             $(this).find('.cell').each(function (j) {
@@ -95,6 +102,14 @@ Original article of method: http://www.yuiblog.com/blog/2010/09/27/clearfix-relo
         });
         ticker = (function () {
             var curr_index = 0, prev_index = 0;
+            reset_ticker = function reset_ticker() {
+                var i, cells_length = cells.length;
+                for (i = 0; i < cells_length; i += 1) {
+                    cells[i][prev_index].classList.remove('on');
+                }
+                curr_index = 0;
+                prev_index = 0;
+            };
             return function ticker() {
                 var i, cells_length = cells.length;
                 for (i = 0; i < cells_length; i += 1) {
@@ -112,9 +127,23 @@ Original article of method: http://www.yuiblog.com/blog/2010/09/27/clearfix-relo
             };
         }());
         // Example usage of the Metronome Constructor
-        metronome = new Metronome();
-        metronome.tempo(110).subticks(4).callback(ticker).start();
+        metronome = new Metronome({ debug: false });
+        metronome.tempo(110).subticks(4).addCallback(ticker);
         global.metronome = metronome;
+        $('#start').on('click', function () {
+            metronome.start();
+        });
+        $('#pause').on('click', function () {
+            metronome.pause();
+        });
+        $('#stop').on('click', function () {
+            metronome.stop();
+            reset_ticker();
+        });
+        $('#tempo').on('click', function () {
+            var tempo = Number(prompt()) >>> 0;
+            metronome.tempo(Number(tempo));
+        });
     });
 }(window, window.jQuery));
         </script>
@@ -251,6 +280,12 @@ Original article of method: http://www.yuiblog.com/blog/2010/09/27/clearfix-relo
                     <div class="cell"></div>
                 </div>
             </div>
+        </div>
+        <div class="utility" style="clear: both;">
+            <button id="start">Start</button>
+            <button id="pause">Pause</button>
+            <button id="stop">Stop</button>
+            <button id="tempo">Set Tempo</button>
         </div>
     </body>
 </html>
