--- a/metronome.html
+++ b/metronome.html
@@ -87,7 +87,7 @@ Original article of method: http://www.yuiblog.com/blog/2010/09/27/clearfix-relo
     padding: 5px 10px;
 }
         </style>
-        <script src="metronome.js" type="text/javascript"></script>
+        <script src="metronome_compact.js" type="text/javascript"></script>
         <script src="jquery.js" type="text/javascript"></script>
         <script type="text/javascript">
 (function (global, $) {
